Add support for reading module export attributes in Native Image